# Cataclysm

./: .gitattributes  .gitignore  vcvars.ps1
Assembly/: .gitignore
Assembly/BuildExperiments/: BuildExperiments.sln
Assembly/Windows/: Makefile
BuildTesting/: .gitignore
BuildTesting/VisualStudioBuildTesting/: VisualStudioBuildTesting.sln
C Learning/: C Learning.sln
C Learning/gl_glfw00_site_tutorial/: gl_glfw00_site_tutorial.vcxproj
C Learning/t01_nuklear_hello/: t01_nuklear_hello.vcxproj.filters
CPP/: .gitignore
CPP/CMade/: .gitignore
CPP/ChernoTutorials/: ChernoTutorials.sln
CPP/Everything/: Everything.sln
CPP/Graphicc/: glfwxd.cpp  ultraSimpleGLFW.cpp
CPP/RandomStuff/GraphiccTest/: CMakeLists.txt
CPP/sdlkys/: kys.cpp
CPP_old/ChernoOpenGL/: ChernoOpenGL.sln
CPP_old/openFrameworks/: openFrameworks.sln
CUDA/: CUDA.sln
CUDA/CUDA/: CUDA.cpp  CUDA.vcxproj
CUDA/Hello/: Hello.vcxproj  kernel.cu
ChernoOpenGL/: ChernoOpenGL.sln
ChernoOpenGL/ChernoOpenGL_rework/: ChernoOpenGL_rework.vcxproj  ChernoOpenGL_rework.vcxproj.filters  imgui.ini
ChernoOpenGL/ChernoOpenGL_second/: ChernoOpenGL_second.vcxproj  ChernoOpenGL_second.vcxproj.filters
Everything/: Everything.sln
Experiments/: .gitignore  Experiments.sln
Interesthings/: Interesthings.sln
LeetCode/: .gitignore  LeetCode.sln
NASM/: .gitignore
OpenCVLearning/: .gitignore  OpenCVLearning.sln
Oyyyy/: Oyyyy.sln
_templates/: _templates.sln
openFrameworks/: .gitignore  openFrameworks.sln
pmxylib/: pmxy.h  pmxyvec.h  sebu.h
sololearnstuff/: sololearnstuff.sln
(+558 files in other folders)
